@@ -1,5 +1,5 @@
 # Process this file with autoconf to produce a configure script.
-AC_INIT(padthv1, 0.9.5, rncbc@rncbc.org)
+AC_INIT(padthv1, 0.9.6, rncbc@rncbc.org)
 
 AC_CONFIG_SRCDIR(src/padthv1.cpp)
 AC_CONFIG_HEADERS(src/config.h)
